2004-03-05 01:45 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormViewWithSubviewsEditor.m: Removed call in
	[GormViewWithSubviewsEditor setOpened:] to setSelectionFromEditor:
	on GormDocument.  This was causing the object to be reset to
	NSWindow on save as well as some other issues.
	
2004-03-05 00:54 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCustomClassInspector.m: Added an "if" in setObject: to
	prevent any problems if the object passed in is nil.
	* GormDocument.m: minor cleanup.
	* GormFilesOwner.m: minor cleanup.
	
2004-03-04 22:54 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormFilesOwner.m: -[GormFilesOwner init] changed the dimensions
	of browser.   Also made it so that the inspector shows up in 
	both the attributes and the custom class slots as expected.  This is
	like in IB under OS4.2. 
	
2004-03-04 01:08 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: [GormDocument setName:forObject:] added
	code to remap the name of an object if it is in the custom
	class map.
	
2004-03-03 11:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCustomClassInspector.[hm]: Removed _currentSelection
	as it was redundant with the "object" ivar.  Rearranged the
	call for setObject:.  it was sligtly out of sync.  The user
	needed to click on the object twice to make certain everything
	is set properly.  Removed references to "correctClassName".
	* GormClassManager.[hm]: Removed the class method "correctClassName"
	the function is now done by overriding the "className" method
	when necessary to return the name of the class the Gorm* equivalent
	is standing in for.  This is a cleaner solution.
	* GormDocument.m: Removed all references to "correctClassName" in the
	_selectClass: method.
	* GormFilesOwner.m: Changed some NSLogs to NSDebugLog so that the
	selection of classes for the File's Owner wont display on the console
	what class was chosen.
	* Palettes/GormNSMenu.m: Added className.